@@ -14,27 +14,26 @@ import com.frank.videoedit.entity.ColorInfo;
 import com.frank.videoedit.transform.listener.Muxer;
 import com.frank.videoedit.transform.util.MediaUtil;
 
-import com.google.common.collect.ImmutableList;
-
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.nio.ByteBuffer;
+import java.util.List;
 
 /** {@link Muxer} implementation that uses a {@link MediaMuxer}. */
 /* package */ final class FrameworkMuxer implements Muxer {
 
   // MediaMuxer supported sample formats are documented in MediaMuxer.addTrack(MediaFormat).
-  private static final ImmutableList<String> SUPPORTED_VIDEO_SAMPLE_MIME_TYPES =
+  private static final List<String> SUPPORTED_VIDEO_SAMPLE_MIME_TYPES =
       Build.VERSION.SDK_INT >= 24
-          ? ImmutableList.of(
+          ? List.of(
               MediaUtil.VIDEO_H263,
               MediaUtil.VIDEO_H264,
               MediaUtil.VIDEO_MP4V,
               MediaUtil.VIDEO_H265)
-          : ImmutableList.of(MediaUtil.VIDEO_H263, MediaUtil.VIDEO_H264, MediaUtil.VIDEO_MP4V);
+          : List.of(MediaUtil.VIDEO_H263, MediaUtil.VIDEO_H264, MediaUtil.VIDEO_MP4V);
 
-  private static final ImmutableList<String> SUPPORTED_AUDIO_SAMPLE_MIME_TYPES =
-      ImmutableList.of(MediaUtil.AUDIO_AAC, MediaUtil.AUDIO_AMR_NB, MediaUtil.AUDIO_AMR_WB);
+  private static final List<String> SUPPORTED_AUDIO_SAMPLE_MIME_TYPES =
+          List.of(MediaUtil.AUDIO_AAC, MediaUtil.AUDIO_AMR_NB, MediaUtil.AUDIO_AMR_WB);
 
   /** {@link Muxer.Factory} for {@link FrameworkMuxer}. */
   public static final class Factory implements Muxer.Factory {
@@ -72,13 +71,13 @@ import java.nio.ByteBuffer;
     }
 
     @Override
-    public ImmutableList<String> getSupportedSampleMimeTypes(@MediaUtil.TrackType int trackType) {
+    public List<String> getSupportedSampleMimeTypes(@MediaUtil.TrackType int trackType) {
       if (trackType == MediaUtil.TRACK_TYPE_VIDEO) {
         return SUPPORTED_VIDEO_SAMPLE_MIME_TYPES;
       } else if (trackType == MediaUtil.TRACK_TYPE_AUDIO) {
         return SUPPORTED_AUDIO_SAMPLE_MIME_TYPES;
       }
-      return ImmutableList.of();
+      return List.of();
     }
   }
 
